--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-    --primary-color: #2c3e50;
-    --secondary-color: #34495e;
-    --accent-color: #e74c3c;
+    --primary-color: #000000;
+    --secondary-color: #000000;
+    --accent-color: #21a909;
     --light-color: #ecf0f1;
-    --dark-text: #2c3e50;
+    --dark-text: #000000;
     --light-text: #ecf0f1;
 }
 
@@ -26,11 +26,11 @@ body {
     color: var(--light-text);
     padding: 2rem 0;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: .5rem;
 }
 
 .main-header h1 {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: "Lexend Deca", sans-serif;
     font-size: 2.5rem;
     margin: 0;
     text-transform: uppercase;
@@ -38,6 +38,7 @@ body {
 }
 
 .subtitle {
+    margin-top: -8px;
     font-size: 1.1rem;
     opacity: 0.9;
 }
@@ -91,7 +92,7 @@ audio {
 }
 
 .btn:hover {
-    background-color: #c0392b;
+    background-color: #2bc0b1;
 }
 
 .learning-tabs {
